--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "again"
 version = "0.1.0"
+authors = ["Matteo Nardi <matteo@matteonardi.org>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.51"
 clap = "2.34.0"
+confy = "0.4.0"
+serde = { version = "1", features = ["derive"] }
