--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "again"
 version = "0.1.0"
 authors = ["Matteo Nardi <matteo@matteonardi.org>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A commands alias manager"
 
 [dependencies]
 anyhow = "1.0.51"
-clap = "2.34.0"
+clap = { version = "3.1", features = ["derive"] }
+clap_complete = "3.1.1"
 confy = "0.4.0"
 serde = { version = "1", features = ["derive"] }
