--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ description = "A commands alias manager"
 anyhow = "1.0.57"
 clap = { version = "3.1.10", features = ["derive"] }
 clap_complete = "3.1.2"
+colored = "2.0.0"
 confy = "0.4.0"
 serde = { version = "1.0.136", features = ["derive"] }
