--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ clap_complete = "3.1.2"
 colored = "2.0.0"
 confy = "0.4.0"
 serde = { version = "1.0.136", features = ["derive"] }
+tempfile = "3.3.0"
